[grid] fixed the invalid session id response #12655